1std day uploaded

--- a/All_Programs.ipynb
+++ b/All_Programs.ipynb
@@ -52,7 +52,7 @@
         "id": "lbd-9RKVryRr",
         "outputId": "07d64996-cd46-476d-ef92-f90b18de2deb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,10 +64,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "09/09/2024 Using Dutch Flag Algorithim for solving this question"
+      ],
+      "metadata": {
+        "id": "rAixz0c0h4vL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_sort_array():\n",
+        "    assert sort_array([0, 1, 2, 1, 0, 2, 1, 0]) == [0, 0, 0, 1, 1, 1, 2, 2], \"Test Case 1 Failed\"\n",
+        "    assert sort_array([2, 2, 2, 2]) == [2, 2, 2, 2], \"Test Case 2 Failed\"\n",
+        "    assert sort_array([0, 0, 0, 0]) == [0, 0, 0, 0], \"Test Case 3 Failed\"\n",
+        "    assert sort_array([1, 1, 1, 1]) == [1, 1, 1, 1], \"Test Case 4 Failed\"\n",
+        "    assert sort_array([2, 0, 1]) == [0, 1, 2], \"Test Case 5 Failed\"\n",
+        "    assert sort_array([]) == [], \"Test Case 6 Failed\"\n",
+        "    assert sort_array([1, 2, 0]) == [0, 1, 2], \"Test Case 7 Failed\"\n",
+        "    print(\"All test cases pass!\")\n",
+        "\n",
+        "\n",
+        "def sort_array(arr):\n",
+        "  low,mid,high=0,0,len(arr)-1\n",
+        "  while mid<=high:\n",
+        "    if arr[mid]==0:\n",
+        "      arr[low],arr[mid]=arr[mid],arr[low]\n",
+        "      low+=1\n",
+        "      mid+=1\n",
+        "    elif arr[mid]==1:\n",
+        "      mid+=1\n",
+        "    else:\n",
+        "      arr[mid],arr[high]=arr[high],arr[mid]\n",
+        "      high-=1\n",
+        "  return arr\n",
+        "\n",
+        "test_sort_array()"
+      ],
+      "metadata": {
+        "id": "-C-NtR2SuE_E",
+        "outputId": "75c55e21-3e23-4938-c376-a0c00489dee3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All test cases pass!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-C-NtR2SuE_E"
+        "id": "Y3L12Fuqk99K"
       },
       "execution_count": null,
       "outputs": []
@@ -76,7 +133,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVrTw+mBzryAK7Lc5uYdj6",
+      "authorship_tag": "ABX9TyMDjd7aWDqVD/W6AkDXwoTt",
       "include_colab_link": true
     },
     "kernelspec": {
