--- a/All_Programs.ipynb
+++ b/All_Programs.ipynb
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,10 +121,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "09/10/2k24 You are given an array arr containing n-1 distinct integers. The array consists of integers taken from the range 1 to n, meaning one integer is missing from this sequence. Your task is to find the missing integer.\n"
+      ],
+      "metadata": {
+        "id": "CrbiLfH486aq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func(li):\n",
+        "  if li==[1]:\n",
+        "    return 2\n",
+        "  for i in range(1,len(li)+1):\n",
+        "    if i not in li:\n",
+        "      return i\n",
+        "  return len(li)+1\n",
+        "test = [[1,2,4,5],[2, 3, 4, 5], [1, 2, 3, 4],[1],[x for x in range(100000)]\n",
+        "]\n",
+        "for ni in test:\n",
+        "  print(func(ni))"
+      ],
+      "metadata": {
+        "id": "Y3L12Fuqk99K",
+        "outputId": "afca7fb1-24f2-4805-e742-33a0e5f2ecd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "1\n",
+            "5\n",
+            "2\n",
+            "100000\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Y3L12Fuqk99K"
+        "id": "ok7Tt9Lz9Zfy"
       },
       "execution_count": null,
       "outputs": []
@@ -133,7 +179,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDjd7aWDqVD/W6AkDXwoTt",
+      "authorship_tag": "ABX9TyProt8ZBEw+TUqDkLdq45fv",
       "include_colab_link": true
     },
     "kernelspec": {
