--- a/All_Programs.ipynb
+++ b/All_Programs.ipynb
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,10 +167,61 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "11/09/2k24"
+      ],
       "metadata": {
-        "id": "ok7Tt9Lz9Zfy"
+        "id": "GTcJChcEUhDl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func(li):\n",
+        "  if li==[]:\n",
+        "    return -1\n",
+        "  c=set(li)\n",
+        "  for i in c:\n",
+        "    if li.count(i)>1:\n",
+        "      return i\n",
+        "  return -1\n",
+        "f=[ [1, 3, 4, 2, 2],\n",
+        "   [3, 1, 3, 4, 2],\n",
+        "     [1, 1],\n",
+        "     [1, 4, 4, 2, 3]\n",
+        "]\n",
+        "for i in f:\n",
+        "  print(func(i))"
+      ],
+      "metadata": {
+        "id": "ok7Tt9Lz9Zfy",
+        "outputId": "e6769856-3059-4f95-bda4-288e92ee37c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "1\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZHjoG0xsVDfP"
       },
       "execution_count": null,
       "outputs": []
@@ -179,7 +230,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyProt8ZBEw+TUqDkLdq45fv",
+      "authorship_tag": "ABX9TyMRywPukPb9X7oFicBpEhnq",
       "include_colab_link": true
     },
     "kernelspec": {
